<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/surah_search"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/surah_search"

        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView"/>
    <item
        android:id="@+id/about_menu"
        android:title="@string/about_menu"
        app:showAsAction="never"/>

    <item
        android:id="@+id/settings_menu"
        android:title="Settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/go_btn_menu"
        android:title="@string/go_to"
        app:showAsAction="ifRoom"/>


</menu>